# naturalearthdata

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: main.rs
src/: download.rs  lib.rs
src/scripts/: fetch_ne_urls.R
src/types/: cultural.rs  mod.rs  physical.rs  scales.rs  traits.rs
