[package]
name = "naturalearthdata"
version = "0.1.2"
edition = "2021"
authors = ["Philippe Massicotte <pmassicotte@hotmail.com>"]
description = "A Rust library for downloading Natural Earth data."
license = "MIT"
repository = "https://github.com/PMassicotte/naturalearthdata"
homepage = "https://github.com/PMassicotte/naturalearthdata"
documentation = "https://docs.rs/naturalearthdata"
readme = "README.md"
keywords = ["naturalearthdata", "geospatial", "data", "gdal", "geoarrow"]
categories = ["science", "science::geo"]

[dependencies]
arrow = { version = "53", features = ["ffi"] }
gdal = "0.17.0"
# geoarrow = { version = "0.3.0", features = ["gdal"] }
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "e12a4982a56f6a875536a7a22f645977877bc7a6", features = [
  "gdal",
] }
